release: 1.3.2 - Revert global height stretching and fix inner card distortion

--- a/styles.css
+++ b/styles.css
@@ -277,7 +277,6 @@
 	display: flex;
 	flex-direction: column;
 	flex-grow: 1;
-	height: 100%;
 	min-height: 0;
 }
 
@@ -285,7 +284,6 @@
 	display: flex;
 	flex-direction: column;
 	flex-grow: 1;
-	height: 100%;
 	min-height: 0;
 }
 
